--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "bugs": {
     "url": "https://github.com/meanie/angular-geo-locate/issues"
   },
+  "packageType": "front-end",
+  "instructions": "https://github.com/meanie/angular-geo-locate#usage",
   "keywords": [
     "meanie",
     "meanie-module",
@@ -28,8 +30,7 @@
   "files": [
     "release",
     "index.js",
-    "bower.json",
-    "meanie.json"
+    "bower.json"
   ],
   "scripts": {
     "pretest": "gulp lint",
